# podcast-sync

./: .gitignore  Cargo.toml  Makefile.toml  ROADMAP.md  index.html  package.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
api_types/: Cargo.toml  report.json
api_types/src/: config.rs  itunes.rs  lib.rs  podcast.rs  podcast_feed.rs  subscriptions.rs
api_types/src/config/: mod.rs
api_types/src/itunes/: mod.rs
src/: 1-preflight.css  app.rs  main.css  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  itunes.rs  mod.rs  podcast_feed.rs  subscriptions.rs
src-tauri/src/itunes/: mod.rs
src-tauri/src/podcast/: mod.rs
src/app/: basedirectory.rs  config.rs  fs.rs
src/components/: mod.rs
src/components/atoms/: button.css  button.rs  itunes_thumb.css  itunes_thumb.rs  mod.rs  text_input.css  text_input.rs
src/components/button/: mod.css  mod.rs
src/components/molecules/: episode_bar.css  episode_bar.rs  itunes_result.css  itunes_result.rs  mod.rs  navigation.css  navigation.rs  podcast_settings.css  podcast_settings.rs  podcast_summary.css  podcast_summary.rs  search_bar.rs
src/components/organisms/: episode_list.rs  mod.rs  subscription_list.css  subscription_list.rs
src/components/text_input/: mod.rs
src/routes/: mod.rs  root.rs  search.css  search.rs
src/utils/: mod.rs
