[package]
name = "podcast-sync-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
api_types = { path = "./api_types" }
chrono = "0.4.38"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.72"
leptos = { version = "0.6.15", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
ron = "0.8.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_repr = "0.1.19"
serde-wasm-bindgen = "0.6.5"
strum_macros = "0.26.4"
stylance = "0.5.1"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"

[workspace]
members = ["api_types", "src-tauri"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "z"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[package.metadata.stylance]
output_file = "./styles.css"
folders = ["./src/"]
# defaults to [".module.scss", ".module.css"]
extensions = [".css", ".module.css"]
hash_len = 7
class_name_pattern = "[name]-[hash]"

[workspace.metadata.bin]
cargo-make = { version = "0.37.23" }
cargo-nextest = { version = "0.9.87" }
cargo-watch = { version = "8.5.3" }
leptosfmt = { version = "0.1.32" }
stylance-cli = { version = "0.5.3", bins = ["stylance"] }
tauri-cli = { version = "2.2.0", bins = ["cargo-tauri"] }
trunk = { version = "0.21.5" }
