[package]
name = "api_types"
edition = "2021"
version = "0.1.0"

[dependencies]
serde_json = "1.0.132"
ron = "0.8.1"
chrono = { version = "0.4.38", features = ["serde"] }

[dependencies.quick-xml]
version = "0.36.2"
features = ["serialize"]

[dependencies.serde]
version = "1.0.210"
features = ["derive"]
